--- a/WebsiteBanSach/Web.config
+++ b/WebsiteBanSach/Web.config
@@ -19,6 +19,14 @@
     <add key="PasswordEmail" value="pegawowggbapfgaa" />
     <add key="Email" value="thanhtaiho188@gmail.com" />
     <add key="EmailAdmin" value="thanhtaiho188@gmail.com" />
+    
+    <!--Cấu hình thanh toán VNPay-->
+    <add key="vnp_Url" value="https://sandbox.vnpayment.vn/paymentv2/vpcpay.html"/>
+    <add key="vnp_Api" value="https://sandbox.vnpayment.vn/merchant_webapi/api/transaction"/>
+    <add key="vnp_TmnCode" value="6QTZO2RO" />
+    <add key="vnp_HashSecret" value="BZMGNDBFSNNVQDHAKDOEJZKWGHUFVKHH" />
+    <add key="vnp_Returnurl" value="https://localhost:44393/ShoppingCart/VnpayReturn"/>
+    
   </appSettings>
   <system.web>
     <authentication mode="Forms">
