--- a/WebsiteBanSach/WebsiteBanSach.csproj
+++ b/WebsiteBanSach/WebsiteBanSach.csproj
@@ -291,6 +291,14 @@
     <Compile Include="Migrations\202304031533024_updateCategory2.Designer.cs">
       <DependentUpon>202304031533024_updateCategory2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202304100619317_updateOrderViewModel.cs" />
+    <Compile Include="Migrations\202304100619317_updateOrderViewModel.Designer.cs">
+      <DependentUpon>202304100619317_updateOrderViewModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202304100804534_updateOrderModel.cs" />
+    <Compile Include="Migrations\202304100804534_updateOrderModel.Designer.cs">
+      <DependentUpon>202304100804534_updateOrderModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Common\Filter.cs" />
@@ -313,6 +321,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\OrderViewModel.cs" />
+    <Compile Include="Models\Payment\VnPayLibrary.cs" />
     <Compile Include="Models\SettingSystemViewModel.cs" />
     <Compile Include="Models\ShoppingCart.cs" />
     <Compile Include="Models\ThongKeViewModel.cs" />
@@ -326,10 +335,16 @@
     <Content Include="Content\assets\images\blog_1.jpg" />
     <Content Include="Content\assets\images\blog_2.jpg" />
     <Content Include="Content\assets\images\blog_3.jpg" />
-    <Content Include="Content\assets\images\deal_ofthe_week.png" />
+    <Content Include="Content\assets\images\book.jpg" />
+    <Content Include="Content\assets\images\book2.jpg" />
     <Content Include="Content\assets\images\desc_1.jpg" />
     <Content Include="Content\assets\images\desc_2.jpg" />
     <Content Include="Content\assets\images\desc_3.jpg" />
+    <Content Include="Content\assets\images\duc.png" />
+    <Content Include="Content\assets\images\eng.png" />
+    <Content Include="Content\assets\images\eng2.png" />
+    <Content Include="Content\assets\images\giphy.gif" />
+    <Content Include="Content\assets\images\italy.png" />
     <Content Include="Content\assets\images\map_marker.png" />
     <Content Include="Content\assets\images\product_1.png" />
     <Content Include="Content\assets\images\product_10.png" />
@@ -348,6 +363,8 @@
     <Content Include="Content\assets\images\single_3.jpg" />
     <Content Include="Content\assets\images\single_3_thumb.jpg" />
     <Content Include="Content\assets\images\slider_1.jpg" />
+    <Content Include="Content\assets\images\tbn.png" />
+    <Content Include="Content\assets\images\vn.png" />
     <Content Include="Content\assets\js\categories_custom.js" />
     <Content Include="Content\assets\js\contact_custom.js" />
     <Content Include="Content\assets\js\custom.js" />
@@ -3640,6 +3657,7 @@
     <Content Include="Views\News\Index.cshtml" />
     <Content Include="Views\News\Detail.cshtml" />
     <Content Include="Views\Article\Index.cshtml" />
+    <Content Include="Views\ShoppingCart\VnpayReturn.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -3724,6 +3742,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202304031533024_updateCategory2.resx">
       <DependentUpon>202304031533024_updateCategory2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202304100619317_updateOrderViewModel.resx">
+      <DependentUpon>202304100619317_updateOrderViewModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202304100804534_updateOrderModel.resx">
+      <DependentUpon>202304100804534_updateOrderModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
